styles/layout.css
/* File: layout.css */
/* Author: Team Web Dev */
/* Contains the layouts for the entire website */

/* Universal Layouts */
/* Makes the footer stay at the bottom */
body {
  display: grid;
  margin: 0;
  min-height: 100vh;
  grid-template-rows: max-content max-content 1fr;
  align-items: end;
}

/* Layouts for Header and Navigatoin */
header {
  width: auto;
  display: grid;
  grid-template-columns: max-content 1fr;
  grid-template-rows: max-content max-content;
  justify-items: start;
  align-items: center;
}

header h1 {
  grid-column: 2/3;
  grid-row: 1/2;
}

#logo {
  grid-column: 1/2;
  grid-row: 1/2;
}

header nav {
  width: 100%;
  height: max-content;
  grid-column: 1/3;
  grid-row: 2/3;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/* Layouts for Index */

/* Layouts for Jobs */
aside {
  float: right;
  max-width: 25%;
}

#jobs-page-footer {
  text-align: center;
}

/* Layouts for About */
#student-ids {
  text-align: right;
}

#team-photo {
  float: right;
}

#interests-table {
  display: flex;
  flex-direction: column;
  justify-items: center;
  text-align: center;
}

/* Layouts for Apply */

